--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -3,8 +3,12 @@
   background: var(--gray700);
   height: 12.5rem;
   justify-content: center;
+  align-items: center;
   padding: 4.5rem 0 5rem;
   gap: 0.75rem;
+  left: 0;
+  right: 0;
+  top: 0;
 }
 
 .header img {
@@ -12,7 +16,7 @@
   height: 2.25rem;
 }
 
-.header text {
+.header strong {
   line-height: 3rem;
   font-weight: 900;
   font-size: 2.5rem;
