fixing layout and finish!

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,7 +3,7 @@
   margin-right: auto;
   max-width: 46rem;
   height: 3.375rem;
-  padding: 1rem;
+  padding: 0rem 1rem 1rem 1rem;
   display: flex;
   flex-direction: column;
   margin-top: -1.687rem;
