--- a/src/components/TaskCard.module.css
+++ b/src/components/TaskCard.module.css
@@ -2,8 +2,8 @@
   width: 100%;
   height: 4.2rem;
   display: flex;
-  /* justify-content: center; */
-  align-items: flex-start;
+  justify-content: space-between;
+  align-items: center;
   padding: 1rem;
   gap: 0.75rem;
   background: var(--gray500);
@@ -42,6 +42,7 @@
   font-size: 0.875rem;
   color: var(--gray100);
   line-height: 1.4;
+  width: 100%;
 }
 
 .checkedText {
