--- a/src/components/TaskCard.module.css
+++ b/src/components/TaskCard.module.css
@@ -11,6 +11,7 @@
   border-radius: 8px;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.06);
   align-self: stretch;
+  animation: fadeIn .5s both;
 }
 
 .task>span input {
@@ -52,6 +53,14 @@
 @media (max-width: 768px) {
   .task {
     height: auto;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  } to {
+    opacity: 1;
   }
 }
 
