--- a/src/components/TaskContainer.module.css
+++ b/src/components/TaskContainer.module.css
@@ -77,6 +77,7 @@
   gap: 1rem;
   border-top: 1px solid var(--gray400);
   border-radius: 8px;
+  animation: fadeIn .5s both;
 }
 
 .emptyTaskList img {
@@ -101,4 +102,12 @@
   gap: 1rem;
   border-top: 1px solid var(--gray400);
   border-radius: 8px;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  } to {
+    opacity: 1;
+  }
 }
